SHC/Dreamcast support (#1276)
* SHC support

* fixed platform icon order

* remove unnecessary ARG in dockerfile

* tidied up dreamcast CC, moved some flags to settings

* enable dreamcast support in CI

* fixed formatting

* cleaned up cc even more as per mkst's advice

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -77,8 +77,10 @@ RUN add-apt-repository -y ppa:dosemu2/ppa && \
 ARG ENABLE_MSDOS_SUPPORT
 ARG ENABLE_PS2_SUPPORT
 ARG ENABLE_WIN32_SUPPORT
+ARG ENABLE_DREAMCAST_SUPPORT
 RUN if [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
     [ "${ENABLE_PS2_SUPPORT}" = "YES" ] || \
+    [ "${ENABLE_DREAMCAST_SUPPORT}" = "YES" ] || \
     [ "${ENABLE_WIN32_SUPPORT}" = "YES" ]; then \
     dpkg --add-architecture i386 && apt-get update && \
     apt-get install -y -o APT::Immediate-Configure=false \
@@ -130,6 +132,7 @@ USER user
 RUN if [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
     [ "${ENABLE_NDS_ARM9_SUPPORT}" = "YES" ] || \
     [ "${ENABLE_PS2_SUPPORT}" = "YES" ] || \
+    [ "${ENABLE_DREAMCAST_SUPPORT}" = "YES" ] || \
     [ "${ENABLE_WIN32_SUPPORT}" = "YES" ]; then \
     wineboot --init; \
     fi
@@ -151,6 +154,7 @@ ENV ENABLE_GC_WII_SUPPORT=${ENABLE_GC_WII_SUPPORT}
 ENV ENABLE_MACOSX_SUPPORT=${ENABLE_MACOSX_SUPPORT}
 ENV ENABLE_MSDOS_SUPPORT=${ENABLE_MSDOS_SUPPORT}
 ENV ENABLE_N3DS_SUPPORT=${ENABLE_N3DS_SUPPORT}
+ENV ENABLE_DREAMCAST_SUPPORT=${ENABLE_DREAMCAST_SUPPORT}
 ENV ENABLE_N64_SUPPORT=${ENABLE_N64_SUPPORT}
 ENV ENABLE_NDS_ARM9_SUPPORT=${ENABLE_NDS_ARM9_SUPPORT}
 ENV ENABLE_PS1_SUPPORT=${ENABLE_PS1_SUPPORT}
