Update compilers yaml

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -119,6 +119,7 @@ ps2:
   - ee-gcc2.9-990721
   - ee-gcc2.9-991111
   - ee-gcc2.9-991111a
+  - ee-gcc2.9-991111b-r4
   - ee-gcc2.9-991111-01
   - ee-gcc2.95.2-273a
   - ee-gcc2.95.2-274
