Add GC compilers mwcc_242_53, mwcc_247_92p1

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -8,9 +8,11 @@ gc_wii:
   - mwcc_233_163
   - mwcc_233_163e
   - mwcc_233_163n
+  - mwcc_242_53
   - mwcc_242_81
   - mwcc_242_81r
   - mwcc_247_92
+  - mwcc_247_92p1
   - mwcc_247_105
   - mwcc_247_107
   - mwcc_247_108
