Use nasm instead of gas for win32
On win32, the mangled c++ identifiers look like this ?square@@YAHH@Z
However, gas is not able to parse this and fails to create a new scratch.
nasm doesn't have the same limitation and doing this change allows us
to create scatches in C++ for win32.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -54,6 +54,7 @@ RUN apt-get -y update && apt-get install -y \
     libnl-route-3-200 \
     libprotobuf-dev \
     libtinfo5 \
+    nasm \
     netcat \
     software-properties-common \
     unzip \
