--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,9 +38,11 @@
         "fast-myers-diff": "^3.2.0",
         "framer-motion": "^11.0.18",
         "is-dark-color": "^1.2.0",
+        "memoize-one": "^5.2.1",
         "next": "^14.1.4",
         "next-plausible": "^3.12.0",
         "next-pwa": "^5.6.0",
+        "objdiff-wasm": "2.0.0-beta.9",
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.7",
