--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.7",
+        "react-date-object": "^2.1.9",
         "react-dom": "^18.2.0",
         "react-laag": "^2.0.5",
         "react-timeago": "^7.2.0",
