--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
         "codemirror": "^6.0.1",
         "dotenv": "^16.4.5",
         "downshift": "9.0.0",
+        "driver.js": "^1.3.1",
         "fast-myers-diff": "^3.2.0",
         "framer-motion": "^11.0.18",
         "is-dark-color": "^1.2.0",
