--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,37 +8,37 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django-cors-headers = "^4.3.1"
-django-environ = "^0.10.0"
-django-filter = "^23.5"
-djangorestframework = "^3.14.0"
-psycopg2-binary = "^2.9.9"
-responses = "0.18.0"
+django-cors-headers = "^4.5.0"
+django-environ = "^0.11.2"
+django-filter = "^24.3"
+djangorestframework = "^3.15.2"
+psycopg2-binary = "^2.9.10"
+responses = "0.25.3"
 jwt = "^1.3.1"
-PyGithub = "^2.1.1"
+PyGithub = "^2.4.0"
 drf-extensions = "^0.7.1"
-tzdata = "^2023.3"
-Pillow = "^10.1.0"
+tzdata = "^2024.2"
+Pillow = "^11.0.0"
 html-json-forms = "^1.1.1"
-django-resized = "^1.0.2"
-django-cleanup = "^8.0.0"
+django-resized = "^1.0.3"
+django-cleanup = "^9.0.0"
 m2c = {git="https://github.com/matt-kempster/m2c.git"}
 asm-differ = {git="https://github.com/simonlindholm/asm-differ.git"}
-sentry-sdk = "^1.39.1"
+sentry-sdk = "^2.17.0"
 django-session-timeout = "^0.1.0"
-django = "^5.0"
-requests = "^2.31.0"
-setuptools = "^70.0.0"
+django = "^5.1.2"
+requests = "^2.32.3"
+setuptools = "^75.2.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.12.0"
-usort = "^1.0.7"
-django-stubs-ext = "^4.2.7"
-django-stubs = "^4.2.7"
-djangorestframework-stubs = "^3.14.5"
-types-requests = "^2.31.0.10"
+black = "^24.10.0"
+usort = "^1.0.8.post1"
+django-stubs-ext = "^5.1.1"
+django-stubs = "^5.1.1"
+djangorestframework-stubs = "^3.15.1"
+types-requests = "^2.32.0.20241016"
 parameterized = "^0.9.0"
-mypy = "^1.7.1"
+mypy = "^1.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
