--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,12 +13,11 @@ django-environ = "^0.11.2"
 django-filter = "^24.3"
 djangorestframework = "^3.15.2"
 psycopg2-binary = "^2.9.10"
-responses = "0.25.3"
 jwt = "^1.3.1"
 PyGithub = "^2.4.0"
 drf-extensions = "^0.7.1"
-tzdata = "^2024.2"
-Pillow = "^11.0.0"
+tzdata = "2024.2"
+Pillow = "11.0"
 html-json-forms = "^1.1.1"
 django-resized = "^1.0.3"
 django-cleanup = "^9.0.0"
@@ -39,6 +38,7 @@ djangorestframework-stubs = "^3.15.1"
 types-requests = "^2.32.0.20241016"
 parameterized = "^0.9.0"
 mypy = "^1.13.0"
+responses = "0.25.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
