--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "license": "MIT",
     "scripts": {
-        "dev": "next dev --turbopack --port 8080",
+        "dev": "next dev --port 8080",
         "build": "next build",
         "start": "next start --port 8080",
         "lint": "next lint && yarn stylelint 'src/**/*.css' 'src/**/*.scss'",
@@ -39,7 +39,7 @@
         "framer-motion": "^11.12.0",
         "is-dark-color": "^1.2.0",
         "memoize-one": "^5.2.1",
-        "next": "15.0.3",
+        "next": "14.2.18",
         "next-plausible": "^3.12.4",
         "next-pwa": "^5.6.0",
         "objdiff-wasm": "2.0.0",
@@ -59,8 +59,8 @@
         "vscode-languageserver-protocol": "^3.17.5"
     },
     "devDependencies": {
-        "@next/bundle-analyzer": "15.0.3",
-        "@next/eslint-plugin-next": "15.0.3",
+        "@next/bundle-analyzer": "14.2.18",
+        "@next/eslint-plugin-next": "14.2.18",
         "@svgr/webpack": "^8.1.0",
         "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
         "@types/react-timeago": "^4.1.7",
@@ -72,7 +72,7 @@
         "css-loader": "^6.10.0",
         "cssnano": "^6.1.1",
         "eslint": "^8.57.0",
-        "eslint-config-next": "15.0.3",
+        "eslint-config-next": "14.2.18",
         "eslint-formatter-rdjson": "^1.0.6",
         "eslint-plugin-css-modules": "^2.12.0",
         "eslint-plugin-react": "^7.37.2",
@@ -95,8 +95,5 @@
     },
     "browserslist": [
         "last 2 versions and not dead and >= 1% and supports async-functions"
-    ],
-    "resolutions": {
-        "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
+    ]
 }
