--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,11 +43,11 @@
         "next-plausible": "^3.12.4",
         "next-pwa": "^5.6.0",
         "objdiff-wasm": "2.0.0",
-        "react": "19.0.0-rc-66855b96-20241106",
+        "react": "^18.3.1",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.7",
         "react-date-object": "^2.1.9",
-        "react-dom": "19.0.0-rc-66855b96-20241106",
+        "react-dom": "^18.3.1",
         "react-laag": "^2.0.5",
         "react-timeago": "^7.2.0",
         "react-virtualized-auto-sizer": "^1.0.24",
@@ -62,7 +62,7 @@
         "@next/bundle-analyzer": "14.2.18",
         "@next/eslint-plugin-next": "14.2.18",
         "@svgr/webpack": "^8.1.0",
-        "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+        "@types/react-dom": "^18.3.1",
         "@types/react-timeago": "^4.1.7",
         "@types/react-virtualized-auto-sizer": "^1.0.4",
         "@types/react-window": "^1.8.8",
