--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
         "next": "14.2.18",
         "next-plausible": "^3.12.4",
         "next-pwa": "^5.6.0",
-        "objdiff-wasm": "2.0.0",
+        "objdiff-wasm": "2.0.0-beta.9",
         "react": "^18.3.1",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.7",
