--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,12 @@
         "@codemirror/lint": "^6.8.4",
         "@codemirror/search": "^6.5.8",
         "@codemirror/state": "^6.4.1",
-        "@codemirror/view": "^6.35.0",
-        "@ducanh2912/next-pwa": "^10.2.9",
+        "@codemirror/view": "^6.35.2",
         "@lezer/common": "^1.2.3",
         "@lezer/cpp": "^1.1.2",
         "@lezer/highlight": "^1.2.1",
         "@open-rpc/client-js": "^1.8.1",
-        "@primer/octicons-react": "^19.12.0",
+        "@primer/octicons-react": "^19.13.0",
         "@radix-ui/colors": "^2.1.0",
         "@radix-ui/react-progress": "^1.1.0",
         "@react-hook/resize-observer": "^1.2.6",
@@ -38,10 +37,9 @@
         "fast-myers-diff": "^3.2.0",
         "framer-motion": "^11.12.0",
         "is-dark-color": "^1.2.0",
-        "memoize-one": "^5.2.1",
+        "memoize-one": "^6.0.0",
         "next": "14.2.18",
         "next-plausible": "^3.12.4",
-        "next-pwa": "^5.6.0",
         "objdiff-wasm": "2.0.0-beta.9",
         "react": "^18.3.1",
         "react-colorful": "^5.6.1",
@@ -52,13 +50,14 @@
         "react-timeago": "^7.2.0",
         "react-virtualized-auto-sizer": "^1.0.24",
         "react-window": "^1.8.10",
-        "sass": "^1.81.0",
+        "sass": "^1.82.0",
         "swr": "^2.2.5",
         "use-debounce": "^10.0.4",
         "use-persisted-state": "^0.3.3",
         "vscode-languageserver-protocol": "^3.17.5"
     },
     "devDependencies": {
+        "@biomejs/biome": "1.9.4",
         "@next/bundle-analyzer": "14.2.18",
         "@next/eslint-plugin-next": "14.2.18",
         "@svgr/webpack": "^8.1.0",
@@ -88,10 +87,10 @@
         "stylelint": "^16.11.0",
         "stylelint-config-css-modules": "^4.4.0",
         "stylelint-config-standard-scss": "^13.0.0",
-        "tailwindcss": "^3.4.15",
+        "tailwindcss": "^3.4.16",
         "typescript": "^5.7.2",
         "umd-compat-loader": "^2.1.2",
-        "webpack": "^5.96.1"
+        "webpack": "^5.97.1"
     },
     "browserslist": [
         "last 2 versions and not dead and >= 1% and supports async-functions"
