--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
     "recommendations": [
         "EditorConfig.EditorConfig",
-        "dbaeumer.vscode-eslint",
         "stylelint.vscode-stylelint",
         "bradlc.vscode-tailwindcss",
+        "biomejs.biome",
     ]
 }
