--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
         "dev": "next dev --port 8080",
         "build": "next build",
         "start": "next start --port 8080",
-        "lint": "next lint && yarn stylelint 'src/**/*.css' 'src/**/*.scss'",
+        "lint": "biome check .",
+        "format": "biome format . --write",
         "postinstall": "next telemetry disable",
         "analyze": "ANALYZE=true next build",
         "clean": "rm -rf .next node_modules"
@@ -74,9 +75,6 @@
         "postcss-scss": "^4.0.9",
         "sass-loader": "^14.1.1",
         "style-loader": "^3.3.4",
-        "stylelint": "^16.11.0",
-        "stylelint-config-css-modules": "^4.4.0",
-        "stylelint-config-standard-scss": "^13.0.0",
         "tailwindcss": "^3.4.16",
         "typescript": "^5.7.2",
         "umd-compat-loader": "^2.1.2",
