--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,10 +4,7 @@
         "module": "esnext",
         "moduleResolution": "node",
         "noEmit": true,
-        "lib": [
-            "ESNext",
-            "DOM"
-        ],
+        "lib": ["ESNext", "DOM"],
         "target": "es6",
         "allowJs": true,
         "skipLibCheck": true,
@@ -24,9 +21,7 @@
         ],
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         },
         "strictNullChecks": false
     },
@@ -37,7 +32,5 @@
         "**/*.tsx",
         ".next/types/**/*.ts"
     ],
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
