--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
         "@biomejs/biome": "1.9.4",
         "@next/bundle-analyzer": "14.2.20",
         "@svgr/webpack": "^8.1.0",
+        "@types/react": "^18.3.1",
         "@types/react-dom": "^18.3.1",
         "@types/react-timeago": "^4.1.7",
         "@types/react-virtualized-auto-sizer": "^1.0.4",
