--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -48,8 +48,7 @@
             },
             "correctness": {
                 "useExhaustiveDependencies": "off",
-                "noUnreachable": "off",
-                "noUnnecessaryContinue": "off"
+                "noUnreachable": "off"
             },
             "complexity": {
                 "noForEach": "off"
