--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -54,6 +54,9 @@
             "performance": {
                 "noDelete": "off",
                 "noAccumulatingSpread": "off"
+            },
+            "nursery": {
+                "useSortedClasses": "error"
             }
         }
     },
