--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -40,7 +40,7 @@
                 "noExplicitAny": "off",
                 "noArrayIndexKey": "off",
                 "noAssignInExpressions": "off",
-                "noImplicitAnyLet": "off"
+                "noConfusingVoidType": "off"
             },
             "correctness": {
                 "useExhaustiveDependencies": "off"
