--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -49,8 +49,7 @@
                 "noForEach": "off"
             },
             "performance": {
-                "noDelete": "off",
-                "noAccumulatingSpread": "off"
+                "noDelete": "off"
             },
             "nursery": {
                 "useSortedClasses": "error"
