--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ django-cors-headers = "^4.6.0"
 django-environ = "^0.11.2"
 django-filter = "^24.3"
 djangorestframework = "^3.15.2"
-psycopg2-binary = "^2.9.10"
+psycopg2 = "^2.9.10"
 jwt = "^1.3.1"
 PyGithub = "^2.5.0"
 drf-extensions = "^0.7.1"
