--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ django-session-timeout = "^0.1.0"
 django = "^5.1.3"
 requests = "^2.32.3"
 setuptools = "^75.6.0"
+cffi = { version = "^1.17.1", markers = "sys_platform != 'win32'" }
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
