--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ django-cors-headers = "^4.6.0"
 django-environ = "^0.11.2"
 django-filter = "^24.3"
 djangorestframework = "^3.15.2"
-psycopg2 = "^2.9.10"
+psycopg2-binary = "^2.9.10"
 jwt = "^1.3.1"
 PyGithub = "^2.5.0"
 drf-extensions = "^0.7.1"
@@ -28,7 +28,6 @@ django-session-timeout = "^0.1.0"
 django = "^5.1.3"
 requests = "^2.32.3"
 setuptools = "^75.6.0"
-cffi = { version = "^1.17.1", markers = "sys_platform != 'win32'" }
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
