Add more PS2 compilers

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -119,6 +119,8 @@ ps1:
   - gcc2.7.2.3-mipsel
 
 ps2:
+  - iop-gcc2.8.1
+  - iop-gcc2.95.2-102
   - ee-gcc2.9-990721
   - ee-gcc2.9-991111
   - ee-gcc2.9-991111a
@@ -129,6 +131,8 @@ ps2:
   - ee-gcc2.95.3-114
   - ee-gcc2.95.3-136
   - ee-gcc2.96
+  - ee-gcc3.2-030210-beta2
+  - ee-gcc3.2-030926
   - ee-gcc3.2-040921
   - mwcps2-2.3-991202
   - mwcps2-2.3.3-000906
