--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
         "@replit/codemirror-vim": "^6.2.1",
         "allotment": "^1.20.2",
         "ansi-to-react": "^6.1.6",
-        "classnames": "^2.5.1",
+        "clsx": "^2.1.1",
         "codemirror": "^6.0.1",
         "dotenv": "^16.4.5",
         "downshift": "9.0.8",
