Add PS2 compiler EE GCC 2.9 build 991111-01 (DTL-S13010)

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -129,6 +129,7 @@ ps2:
   - ee-gcc2.9-991111
   - ee-gcc2.9-991111a
   - ee-gcc2.9-991111-01
+  - ee-gcc2.9-991111-01-dtls13010
   - ee-gcc2.95.2-273a
   - ee-gcc2.95.2-274
   - ee-gcc2.95.3-107
