--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ django = "^5.1.3"
 requests = "^2.32.3"
 setuptools = "^75.6.0"
 debugpy = "^1.8.13"
+gunicorn = "^23.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
