Add DXSDK 9.0 to win32 libraries

--- a/backend/libraries/libraries.yaml
+++ b/backend/libraries/libraries.yaml
@@ -8,3 +8,7 @@ win32:
       git:
         url: https://github.com/roblabla/directx-headers
         branch: main
+    '9.0':
+      git:
+        url: https://github.com/ifarbod/dxsdk9
+        branch: master
