--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -234,7 +234,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build decompme_backend image
         run: |-
-          docker build backend -f Dockerfile.prod -t decompme_backend
+          docker build backend -f backend/Dockerfile.prod -t decompme_backend
       - name: Run tests
         run: |-
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
