--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -69,7 +69,7 @@ services:
       - "5432:5432"
     restart: on-failure
     volumes:
-      - ./postgres2:/var/lib/postgresql/data
+      - ./postgres:/var/lib/postgresql/data
     networks:
       - decompme
 
