--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,7 @@ jobs:
           SYSTEM_ENV: GITHUB_WORKFLOW
           TIMEOUT_SCALE_FACTOR: 10
 
-  backend_test_docker:
+  backend_test_docker_dev:
     name: backend tests (docker dev)
     runs-on: ubuntu-24.04
     steps:
@@ -193,15 +193,8 @@ jobs:
         run: |-
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
-          mkdir -p sandbox && chmod 777 sandbox
-          mkdir -p local_files && chmod 777 local_files
-          mkdir -p compilers && chmod 777 compilers
-          mkdir -p libraries && chmod 777 libraries
           docker run \
             -v $(pwd):/decomp.me \
-            -v $(pwd)/local_files:/local_files \
-            -v $(pwd)/compilers:/compilers \
-            -v $(pwd)/libraries:/libraries \
             --security-opt apparmor=unconfined \
             --security-opt seccomp=unconfined \
             --cap-drop all \
@@ -210,10 +203,7 @@ jobs:
             --cap-add setfcap \
             --tmpfs /sandbox/tmp:exec,uid=1000,gid=1000,size=64M,mode=0700 \
             --entrypoint /bin/bash \
-            -e COMPILER_BASE_PATH=/compilers \
-            -e LIBRARY_BASE_PATH=/libraries \
             -e WINEPREFIX=/tmp/wine \
-            -e LOCAL_FILE_DIR=/local_files \
             -e USE_SANDBOX_JAIL=on \
             -e SANDBOX_DISABLE_PROC=true \
             -e TIMEOUT_SCALE_FACTOR=10 \
@@ -221,13 +211,13 @@ jobs:
             decompme_backend \
               -c 'cd /decomp.me/backend && \
               poetry install --no-root && \
-              poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} && \
-              poetry run libraries/download.py --libraries-dir ${LIBRARY_BASE_PATH} && \
+              poetry run compilers/download.py && \
+              poetry run libraries/download.py && \
               for r in wine/*.reg; do regedit $r; done && \
               poetry run python manage.py test'
 
 
-  backend_test_docker_new:
+  backend_test_docker_prod:
     name: backend tests (docker prod)
     runs-on: ubuntu-24.04
     steps:
@@ -235,17 +225,20 @@ jobs:
       - name: Build decompme_backend image
         run: |-
           docker build backend -f backend/Dockerfile.prod -t decompme_backend
+      - name: Fetch compilers and libraries
+        run: |-
+          python3 -m pip install requests
+          python3 compilers/download.py
+          python3 libraries/download.py
       - name: Run tests
         run: |-
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
           mkdir -p local_files && chmod 777 local_files
-          mkdir -p compilers && chmod 777 compilers
-          mkdir -p libraries && chmod 777 libraries
           docker run \
             -v $(pwd)/local_files:/local_files \
-            -v $(pwd)/compilers:/compilers \
-            -v $(pwd)/libraries:/libraries \
+            -v $(pwd)/backend/compilers:/backend/compilers \
+            -v $(pwd)/backend/libraries:/backend/libraries \
             --security-opt apparmor=unconfined \
             --security-opt seccomp=unconfined \
             --cap-drop all \
@@ -264,11 +257,32 @@ jobs:
             -e DUMMY_COMPILER=1 \
             -e SECRET_KEY=secret-key-secret-key-secret-key-secret-key-secret-key-secret-key \
             decompme_backend \
-              -c 'poetry run python3 -m pip freeze && \
-              poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} && \
-              poetry run libraries/download.py --libraries-dir ${LIBRARY_BASE_PATH} && \
-              for r in wine/*.reg; do regedit $r; done && \
-              poetry run python manage.py test'
+              -c 'poetry run python manage.py test'
+
+  docker_compose_test:
+    name: test docker compose
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup dummy docker.prod.dev
+        run: |-
+          echo "SECRET_KEY=secret-key-secret-key-secret-key-secret-key-secret-key-secret-key" >> docker.prod.env
+      - name: Bring up postgres & nginx containers
+        run: |
+          docker compose -f docker-compose.prod.yaml up -d postgres nginx
+      - name: Build and bring up backend
+        run: |-
+          docker compose -f docker-compose.prod.yaml build backend
+          docker compose -f docker-compose.prod.yaml up -d backend
+      - name: Build and bring up frontend (relies on backend for SSR)
+        run: |-
+          docker compose -f docker-compose.prod.yaml build frontend
+          docker compose -f docker-compose.prod.yaml up -d frontend
+      - name: Shut everything down again after 30 seconds
+        run: |-
+          docker compose -f docker-compose.prod.yaml logs -f &
+          sleep 30
+          docker compose -f docker-compose.prod.yaml down
 
   frontend_lint:
     name: biome
