--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -12,7 +12,6 @@ services:
     env_file:
       - docker.prod.env
     ports:
-      # explicitly publish so frontend can reach the backend during building
       - "8000:8000"
     restart: on-failure
     security_opt:
@@ -45,7 +44,6 @@ services:
     ports:
       - "8080:8080"
     restart: on-failure
-
     networks:
       - decompme
 
@@ -57,6 +55,10 @@ services:
     volumes:
       - ./nginx:/etc/nginx/conf.d
       - ./backend/media:/media
+    # BOOTSTRAP: allow nginx to start before backend/frontend are up
+    extra_hosts:
+      - "backend=172.17.0.1"   # docker br0
+      - "frontend=172.17.0.1"  # docker br0
     networks:
       - decompme
 
