Add pgdump dir to allow pg_restore

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -72,6 +72,8 @@ services:
     restart: on-failure
     volumes:
       - ./postgres:/var/lib/postgresql/data
+      # BOOTSTRAP: for restoring db
+      - ./pgdump:/pgdump
     networks:
       - decompme
 
