--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -21,6 +21,8 @@ services:
       # persist compilers + libraries
       - ./backend/compilers:/backend/compilers
       - ./backend/libraries:/backend/libraries
+      # static files for django /admin control panel
+      - ./backend/static:/backend/static
     tmpfs:
       # Use a separate tmpfs to prevent a rogue jailed process
       # from filling /tmp on the parent container
@@ -48,17 +50,39 @@ services:
       - decompme
 
   nginx:
-    image: nginx:1.28-alpine
+    build:
+      context: nginx
     ports:
       - "80:80"
+      - "443:443"
     restart: on-failure
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      # repo files
+      - ./nginx/production.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./frontend/down.html:/var/www/decomp.me/down.html:ro
+      # certbot
+      - ./certbot:/var/www/certbot
+      - ./letsencrypt:/etc/letsencrypt
+      # NOTE: /media is a "Project" feature, currently unused
       - ./backend/media:/media
-    # BOOTSTRAP: allow nginx to start before backend/frontend are up
+      # static files for django /admin control panel
+      - ./backend/static:/var/www/decomp.me/static
+      # TODO: mount static + public files from frontend
+    # BOOTSTRAP: allow nginx to start before backend/frontend containers are up
     extra_hosts:
       - "backend=172.17.0.1"   # docker br0
       - "frontend=172.17.0.1"  # docker br0
+    networks:
+      - decompme
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot:/var/www/certbot
+      - ./letsencrypt:/etc/letsencrypt
+    entrypoint: "/bin/sh -c"
+    command: >
+      "trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew --webroot -w /var/www/certbot; done"
     networks:
       - decompme
 
@@ -72,7 +96,7 @@ services:
     restart: on-failure
     volumes:
       - ./postgres:/var/lib/postgresql/data
-      # BOOTSTRAP: for restoring db
+      # BOOTSTRAP: for dumping/restoring db
       - ./pgdump:/pgdump
     networks:
       - decompme
