--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,5 +48,5 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx/development.conf:/etc/nginx/conf.d/default.conf:ro
       - ./backend/media:/media
