Add proxy timeouts for sanity

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -34,6 +34,10 @@ server {
 
     error_page 502 /down.html;
 
+    proxy_connect_timeout 3s;
+    proxy_send_timeout 10s;
+    proxy_read_timeout 60s;
+
     location / {
         try_files /down.html @proxy_frontend;
     }
