--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,6 @@
 FROM nginx:1.28-alpine
 
+RUN apk add brotli nginx-mod-http-brotli
+
 RUN mkdir -p /var/www/certbot/
 RUN mkdir -p /var/www/decomp.me/
