--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -24,13 +24,13 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # brotli on;
-    # brotli_static on;
-    # brotli_types application/atom+xml application/javascript application/json application/rss+xml
-    #              application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype
-    #              application/x-font-ttf application/x-javascript application/xhtml+xml application/xml
-    #              font/eot font/opentype font/otf font/truetype image/svg+xml image/vnd.microsoft.icon
-    #              image/x-icon image/x-win-bitmap text/css text/javascript text/plain text/xml;
+    brotli on;
+    brotli_static on;
+    brotli_types application/atom+xml application/javascript application/json application/rss+xml
+                 application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype
+                 application/x-font-ttf application/x-javascript application/xhtml+xml application/xml
+                 font/eot font/opentype font/otf font/truetype image/svg+xml image/vnd.microsoft.icon
+                 image/x-icon image/x-win-bitmap text/css text/javascript text/plain text/xml;
 
     error_page 502 /down.html;
 
