Set 5M upload limit in nginx

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -16,6 +16,8 @@ server {
     listen 443 ssl http2;
     server_name decomp.me www.decomp.me;
 
+    client_max_body_size 5M;
+
     root /var/www/decomp.me;
     index index.html;
 
