Use GIT_HASH from --build-arg

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -18,9 +18,7 @@ COPY tsconfig.json /frontend/
 COPY public /frontend/public
 COPY src /frontend/src
 
-# TODO: do we need some cache-busting here if only backend changes (SSR)?
-
-# NOTE: 'backend' will point to bare-metal host via br0 adapter
+# NOTE: 'backend' will point to bare-metal host via docker0 bridge adapter
 ARG INTERNAL_API_BASE=http://backend:8000/api
 ENV INTERNAL_API_BASE=${INTERNAL_API_BASE}
 
@@ -32,6 +30,10 @@ ENV GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
 
 ARG OBJDIFF_BASE=https://diff.decomp.dev/
 ENV OBJDIFF_BASE=${OBJDIFF_BASE}
+
+# allows for cache busting even if only backend changed
+ARG GIT_HASH=abc123
+ENV GIT_HASH=${GIT_HASH}
 
 RUN until curl -s --head "${INTERNAL_API_BASE}" | grep "HTTP/" > /dev/null; do \
         sleep 1; \
